@@ -3306,7 +3306,9 @@ EventHandler::MenuActionList EventHandler::ourMenuActionList = { {
 
   { Event::UIPrevDir,         "Parent directory",     "" },
   { Event::ToggleFullScreen,  "Toggle fullscreen",    "" },
-  { Event::Quit,              "Quit",                 "" }
+  { Event::Quit,              "Quit",                 "" },
+  { Event::UIHelp,       "Help"                  "" }
+
 } };
 
 // Event groups
